[package]
name = "twwe-desktop"
version = "0.1.0"
description = "Teeworlds Web Editor Desktop"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
license = ""
repository = ""
default-run = "twwe-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
twwe-server = { path = "../server", features = ["bridge_out"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.32.0"
env_logger = "0.10.2"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
