[package]
name = "twwe-server"
description = "Teeworlds Web Editor Server"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.18", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.23"
rustls-pemfile = "0.2"
webpki-roots = "0.22"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray =  { version = "0.15", features = ["serde"] }
# twmap = "0.10"
twmap = { git = "https://gitlab.com/k2d222/twmap.git" }
pretty_env_logger = "0.4"
log = "0.4"
glob = "0.3"
parking_lot = "0.12"
clap = { version = "3.0", features = ["derive"] }
regex = "1.6"
axum = { version = "0.6.8", features = ["headers", "tokio", "multipart"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tower-http = {version = "0.4.0", features = ["fs", "cors"] }
tokio-util = "0.7.7"
fixed = "1.19"
image = "0.24.5"
uuid = { version = "1.3.1", features = [ "v4", "fast-rng" ] }
base64 = "0.21.2"
structview = "1.1.0"
bytemuck = "1.13.1"
vek = { version = "0.15.10", features = ["rgba", "serde"] }
thiserror = "1.0.44"
sanitize-filename = "0.5.0"
partial_derive = "0.1.0"
serde_with = "3.3.0"
axum-tungstenite = "0.3.0"
tower = "0.4.13"
reverse-proxy-service = { version = "0.2.1", features = ["rustls-webpki-roots", "axum"] }
url = "2.4.1"
rand = "0.8.5"
hyper = "0.14.27"
either = "1.9.0"
itertools = "0.11.0"


[lib]

[features]
bridge = []
