[package]
name = "twwe-server"
description = "Teeworlds Web Editor Server"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/k2d222/twwe"
keywords = ["teeworlds", "ddnet", "twwe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray =  { version = "0.15", features = ["serde"] }
twmap = "0.12"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
regex = "1.6"
axum = { version = "0.7", features = ["tokio", "multipart", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
tower-http = { version = "0.6.1", features = ["fs", "cors", "limit"] }
fixed = "1.19"
image = "0.24.5"
uuid = { version = "1.3.1", features = [ "v4", "fast-rng" ] }
base64 = "0.21.2"
structview = "1.1.0"
vek = { version = "0.16", features = ["az", "rgba", "serde", "uv"] }
thiserror = "1.0.44"
sanitize-filename = "0.5.0"
serde_with = "3.3.0"
rand = "0.8.5"
either = "1.9.0"
itertools = "0.11.0"
tower_governor = { version = "0.4.3", features = ["axum"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
bcrypt = "0.15.1"
lazy_static = "1.5.0"
platform-dirs = "0.3.0"


[lib]

[features]
default = ["bridge_in"]
bridge_out = []
bridge_in = []
